--- a/apps/pixelate/src/app/app.component.html
+++ b/apps/pixelate/src/app/app.component.html
@@ -1,1 +1,40 @@
-<router-outlet></router-outlet>
+<px-header></px-header>
+
+<main>
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a dictum quam. Phasellus varius aliquam facilisis.
+    Fusce venenatis volutpat metus vel suscipit. Fusce auctor nec leo vel mattis. Class aptent taciti sociosqu ad litora
+    torquent per conubia nostra, per inceptos himenaeos. Etiam lacinia pulvinar risus, eu dignissim dolor aliquam a.
+    Etiam eget porta dui. Integer sed sem at diam fermentum eleifend.
+
+    Maecenas augue nunc, finibus vel tempus non, dapibus non elit. Nam et magna dapibus, facilisis purus sodales,
+    consequat eros. Vestibulum euismod vel risus at sodales. Suspendisse ac maximus est, vel gravida ipsum. Nullam augue
+    sapien, rutrum sit amet lacinia at, dignissim sit amet dui. Nam dapibus vel orci vel aliquam. Praesent ut magna
+    vitae nisi congue fringilla nec condimentum odio. Aenean consequat tincidunt mauris, ut consectetur orci laoreet a.
+    Aenean eget imperdiet ligula. Nulla venenatis diam libero, sed hendrerit elit luctus sed. Vestibulum mi purus,
+    sollicitudin id porttitor quis, condimentum in velit.
+
+    Proin ipsum arcu, malesuada pellentesque purus eu, maximus interdum purus. Morbi vel felis purus. Mauris lorem
+    ligula, egestas ac fringilla consequat, commodo id nisl. Morbi sed tortor vitae enim fringilla accumsan ac et eros.
+    Nunc porta lorem et massa fermentum, et viverra massa bibendum. Suspendisse vel odio pharetra, ultricies turpis ac,
+    porta nisi. Nulla facilisi. Nulla ac elit in neque fermentum vehicula id lacinia metus. Nunc risus odio, porttitor a
+    faucibus et, iaculis vitae nisi. Mauris vestibulum maximus lectus, id imperdiet ex. Pellentesque vulputate tincidunt
+    pellentesque.
+
+    Nulla fringilla iaculis leo, quis rhoncus ex luctus at. Suspendisse mattis neque in fermentum vulputate. Morbi a
+    molestie ipsum, eget blandit nibh. Pellentesque dapibus lacus sit amet lobortis varius. Curabitur at iaculis massa,
+    in malesuada augue. Vivamus ut eleifend ipsum. Proin orci quam, dapibus eu ex eget, finibus rutrum massa. Aliquam
+    erat volutpat. Nunc placerat suscipit lobortis. Proin at orci quis nisi rutrum congue vel in dolor. Nam consequat
+    dolor sit amet justo suscipit, quis bibendum orci maximus. Suspendisse porta lectus at sapien aliquet elementum.
+    Nunc eu quam molestie, volutpat justo vitae, finibus augue. Proin eget ex purus.
+
+    Aliquam risus lectus, fringilla rhoncus gravida sed, iaculis ac diam. Pellentesque efficitur, risus vitae lobortis
+    blandit, purus velit sodales dolor, id cursus velit dui id nisl. Duis viverra consectetur orci sit amet
+    pellentesque. Integer eu sem sed mi ornare tincidunt in commodo ex. Donec fringilla rhoncus nisi a mattis. Phasellus
+    convallis elit at odio laoreet posuere. Sed commodo sapien id neque interdum pulvinar. Vestibulum ac porttitor
+    lectus, ultrices ornare orci. Etiam non mi sed tellus suscipit elementum. Vestibulum ut ipsum quis mi semper
+    pharetra vitae sit amet nibh. Nam imperdiet tincidunt ex. Suspendisse fringilla sapien nunc, sit amet fringilla nibh
+    pharetra quis. Ut luctus ac sapien quis aliquet.
+  </p>
+  <router-outlet></router-outlet>
+</main>
