--- a/apps/pixelate/src/app/editor/editor.component.html
+++ b/apps/pixelate/src/app/editor/editor.component.html
@@ -1,1 +1,4 @@
-<canvas pxCanvas [palette]="palette$ | async" [pixels]="pixels$ | async" [size]="size$ | async"></canvas>
+<canvas id="editor-canvas" #editor pxCanvas [palette]="palette$ | async" [pixels]="pixels$ | async"
+  [size]="size$ | async"></canvas>
+<canvas id="ui-highlight-canvas" #uiHighlight pxHighlightCanvas [height]="editor.height" [width]="editor.width"
+  [size]="size$ | async" [hidden$]="mouseOut$" [position$]="position$"></canvas>
