--- a/apps/pixelate/src/app/editor/editor.component.scss
+++ b/apps/pixelate/src/app/editor/editor.component.scss
@@ -1,8 +1,19 @@
 :host {
-  display: inline-block;
+  position: relative;
+  display: block;
   box-sizing: border-box;
 }
 
-canvas[pxCanvas] {
-  border: 1px dashed black;
+canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+#editor-canvas {
+  outline: 1px dashed black;
+}
+
+#ui-highlight-canvas {
+  pointer-events: none;
 }
