--- a/apps/pixelate/src/app/layout/menu/menu.component.scss
+++ b/apps/pixelate/src/app/layout/menu/menu.component.scss
@@ -1,3 +1,24 @@
+@import "../../theme/variables";
+
 :host {
+  display: block;
+  box-sizing: border-box;
   position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  max-height: 100%;
+  transition: transform 0.3s;
+  width: $layout-menu-width;
+  background-color: $color-surface;
+  padding-top: $layout-header-height;
+  border-right-width: $border-width;
+  border-right-color: $border-color;
+  border-right-style: $border-style;
+  box-shadow: $box-shadow;
+  z-index: $layout-menu-z-index;
+}
+
+:host:not(.open) {
+  transform: translateX(-100%);
 }
