:rocket: Gallery updates

--- a/apps/pixelate/src/app/theme/theme.scss
+++ b/apps/pixelate/src/app/theme/theme.scss
@@ -4,6 +4,7 @@
 @import "./variables";
 // Additional theme files
 @import "./base.scss";
+@import "./button.scss";
 @import "./border.scss";
 @import "./box-shadow.scss";
 @import "./colors.scss";
