--- a/apps/pixelate/src/app/editor/editor.component.scss
+++ b/apps/pixelate/src/app/editor/editor.component.scss
@@ -1,19 +1,18 @@
 :host {
-  position: relative;
-  display: block;
-  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
-canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
+.editor-top {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-#editor-canvas {
-  outline: 1px dashed black;
-}
-
-#ui-highlight-canvas {
-  pointer-events: none;
+.toolbar {
+  height: 100px;
+  display: flex;
+  align-items: center;
 }
