--- a/apps/pixelate/src/app/gallery/item/gallery-item.component.scss
+++ b/apps/pixelate/src/app/gallery/item/gallery-item.component.scss
@@ -11,16 +11,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 $spacing-md;
+  padding: $spacing-md;
   background: $color-surface;
   box-shadow: $box-shadow;
 
-  .gallery-item-header > * {
-    margin: $spacing-md 0;
+  > * + * {
+    margin-top: $spacing-md;
   }
 
   .gallery-item-preview {
-    margin: $spacing-md 0;
     height: 250px;
     display: flex;
     justify-content: center;
@@ -32,10 +31,9 @@
   }
 
   .gallery-item-actions {
-    padding: $spacing-md 0;
-
     & > * {
-      margin: $spacing-xs;
+      margin: 0 $spacing-xs;
+      margin-bottom: $spacing-xs;
     }
   }
 }
