--- a/apps/pixelate/src/app/theme/theme.scss
+++ b/apps/pixelate/src/app/theme/theme.scss
@@ -1,11 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 // '_Variables.scss' required to be imported first
-@import "./variables";
+@import './variables';
 // Additional theme files
-@import "./base.scss";
-@import "./button.scss";
-@import "./border.scss";
-@import "./box-shadow.scss";
-@import "./colors.scss";
-@import "./scrollbar.scss";
+@import './base.scss';
+@import './button.scss';
+@import './border.scss';
+@import './box-shadow.scss';
+@import './colors.scss';
+@import './input.scss';
+@import './scrollbar.scss';
