--- a/apps/pixelate/src/app/theme/button.scss
+++ b/apps/pixelate/src/app/theme/button.scss
@@ -1,13 +1,16 @@
 button {
   appearance: none;
+  display: inline-flex;
+  align-items: center;
   font-family: inherit;
+  padding: 0 $spacing-md;
   background: $color-surface;
   border-width: $border-width;
   border-color: $border-color;
   border-style: $border-style;
   text-transform: uppercase;
   cursor: pointer;
-  height: 2.5rem;
+  height: 50px;
   font-size: 0.75rem;
   transition: all 0.3s;
 
