--- a/apps/pixelate/src/app/gallery/item/gallery-item.component.scss
+++ b/apps/pixelate/src/app/gallery/item/gallery-item.component.scss
@@ -1,9 +1,9 @@
-@import "../../theme/variables";
+@import '../../theme/variables';
 
 :host {
   display: block;
   flex: 1 1 100%;
-  max-width: 300px;
+  max-width: 360px;
   margin: $spacing-md;
 }
 
@@ -11,12 +11,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: $spacing-md;
+  padding: $spacing-lg;
   background: $color-surface;
   box-shadow: $box-shadow;
 
   > * + * {
-    margin-top: $spacing-md;
+    margin-top: $spacing-lg;
   }
 
   .gallery-item-preview {
@@ -32,9 +32,18 @@
 
   .gallery-item-actions {
     & > * {
-      margin: 0 $spacing-xs;
       margin-bottom: $spacing-xs;
+
+      & + * {
+        margin-left: $spacing-xs;
+      }
     }
+  }
+
+  .gallery-item-name {
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
   }
 }
 
