--- a/apps/pixelate/src/app/gallery/gallery.component.html
+++ b/apps/pixelate/src/app/gallery/gallery.component.html
@@ -1,5 +1,12 @@
 <div class="gallery-items">
   <ng-container *ngFor="let sprite of sprites$ | async">
     <px-gallery-item [sprite]="sprite"></px-gallery-item>
+    <px-scroll-pager
+      [currentPage]="currentPage$ | async"
+      [total]="total$ | async"
+      [perPage]="perPage$ | async"
+      [disabled]="isLoading$ | async"
+      (page)="setPage($event)"
+    ></px-scroll-pager>
   </ng-container>
 </div>
