--- a/apps/pixelate/src/app/gallery/gallery.component.scss
+++ b/apps/pixelate/src/app/gallery/gallery.component.scss
@@ -1,3 +1,10 @@
+:host {
+  display: block;
+  width: 100%;
+  max-height: 100%;
+  overflow: auto;
+}
+
 .gallery-items {
   margin: 0 auto;
   // max-width: 1200px;
