--- a/apps/pixelate/src/app/gallery/item/gallery-item.component.html
+++ b/apps/pixelate/src/app/gallery/item/gallery-item.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="gallery-item-actions">
-    <button type="button" (click)="copyEmbed()">Embed</button>
+    <!-- <button type="button" (click)="copyEmbed()">Embed</button> -->
     <button type="button" (click)="copySVG()">SVG</button>
     <button type="button" [routerLink]="['/editor', sprite.slug]">Edit</button>
   </div>
