--- a/apps/pixelate/src/app/editor/stage/editor-stage.component.scss
+++ b/apps/pixelate/src/app/editor/stage/editor-stage.component.scss
@@ -1,3 +1,7 @@
+:host {
+  display: block;
+}
+
 .stage {
   position: relative;
   display: block;
@@ -17,5 +21,11 @@ canvas {
   pointer-events: none;
   position: absolute;
   top: 0;
+  left: 0;
+}
+
+.debug {
+  position: absolute;
+  bottom: 0;
   left: 0;
 }
